<resources>
    <string name="app_name">CBE Birr</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cbebirr">CBEBirr</string>
    <string name="menu_ministatement">Mini Statement</string>
    <string name="menu_changepin">Change PIN</string>
    <string name="menu_manegebeneficiary">Manege Beneficiary</string>
    <string name="menu_manegebill">Manege Bill</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_changelanguage">Change Language</string>


    <string-array name="names">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>